gen/br/unicamp/ic/mc911/lya/grammar/LyaParser.java
// Generated from /home/diegorocha/Documents/MC911/src/main/java/br/unicamp/ic/mc911/lya/grammar/Lya.g4 by ANTLR 4.5.1
package br.unicamp.ic.mc911.lya.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LyaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DIGIT=1, WS=2, Nl=3, BlockComment=4, LineComment=5, COMMA=6, COLON=7, 
		SEMICOLON=8, UNDERSCORE=9, EQUALS=10, SINGLEQUOTE=11, DOUBLEQUOTE=12, 
		LPARENS=13, RPARENS=14, LBRACKET=15, RBRACKET=16, ARROW=17, STRINGCONCAT=18, 
		PLUS=19, MINUS=20, TIMES=21, DIVIDE=22, MODULO=23, AND=24, OR=25, NOT=26, 
		EQ=27, NEQ=28, LT=29, LE=30, GT=31, GE=32, ARRAY=33, BY=34, CHARS=35, 
		DCL=36, DO=37, DOWN=38, ELSE=39, ELSIF=40, END=41, EXIT=42, FI=43, FOR=44, 
		IF=45, IN=46, LOC=47, TYPE=48, OD=49, PROC=50, REF=51, RESULT=52, RETURN=53, 
		RETURNS=54, SYN=55, THEN=56, TO=57, WHILE=58, BOOL=59, CHAR=60, FALSE=61, 
		INT=62, LENGTH=63, LOWER=64, NULL=65, NUM=66, PRED=67, PRINT=68, READ=69, 
		SUCC=70, TRUE=71, UPPER=72, IDENTIFIER=73, CharLiteral=74, StringLiteral=75, 
		UnterminatedBlockComment=76, UnterminatedStringLiteral=77;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_declaration_statement = 2, 
		RULE_declaration_list = 3, RULE_declaration = 4, RULE_initialization = 5, 
		RULE_identifier_list = 6, RULE_synonym_statement = 7, RULE_synonym_list = 8, 
		RULE_synonym_definition = 9, RULE_constant_expression = 10, RULE_newmode_statement = 11, 
		RULE_newmode_list = 12, RULE_mode_definition = 13, RULE_modo = 14, RULE_discrete_mode = 15, 
		RULE_mode_name = 16, RULE_integer_mode = 17, RULE_boolean_mode = 18, RULE_character_mode = 19, 
		RULE_discrete_mode_name = 20, RULE_literal_range = 21, RULE_upper_bound = 22, 
		RULE_lower_bound = 23, RULE_reference_mode = 24, RULE_composite_mode = 25, 
		RULE_string_mode = 26, RULE_string_length = 27, RULE_array_mode = 28, 
		RULE_index_mode = 29, RULE_element_mode = 30, RULE_location = 31, RULE_simple_location = 32, 
		RULE_location_name = 33, RULE_dereferenced_reference = 34, RULE_string_element = 35, 
		RULE_start_element = 36, RULE_string_slice = 37, RULE_string_location = 38, 
		RULE_left_element = 39, RULE_right_element = 40, RULE_array_element = 41, 
		RULE_expression_list = 42, RULE_array_slice = 43, RULE_array_location = 44, 
		RULE_array_location_range = 45, RULE_primitive_value = 46, RULE_literal = 47, 
		RULE_integer_literal = 48, RULE_digit_sequence = 49, RULE_boolean_literal = 50, 
		RULE_character_literal = 51, RULE_empty_literal = 52, RULE_character_string_literal = 53, 
		RULE_value_array_element = 54, RULE_value_array_slice = 55, RULE_array_primitive_value_complement = 56, 
		RULE_array_primitive_value = 57, RULE_parenthesized_expression = 58, RULE_expression = 59, 
		RULE_conditional_expression = 60, RULE_boolean_expression = 61, RULE_then_expression = 62, 
		RULE_else_expression = 63, RULE_elsif_expression = 64, RULE_operand0 = 65, 
		RULE_operator1 = 66, RULE_relational_operator = 67, RULE_membership_operator = 68, 
		RULE_operand1 = 69, RULE_operator2 = 70, RULE_arithmetic_additive_operator = 71, 
		RULE_string_concatenation_operator = 72, RULE_operand2 = 73, RULE_arithmetic_multiplicative_operator = 74, 
		RULE_operand3 = 75, RULE_monadic_operator = 76, RULE_operand4 = 77, RULE_referenced_location = 78, 
		RULE_action_statement = 79, RULE_label_id = 80, RULE_action = 81, RULE_bracketed_action = 82, 
		RULE_assignment_action = 83, RULE_assigning_operator = 84, RULE_closed_dyadic_operator = 85, 
		RULE_assignment_symbol = 86, RULE_if_action = 87, RULE_then_clause = 88, 
		RULE_else_clause = 89, RULE_do_action = 90, RULE_control_part = 91, RULE_for_control = 92, 
		RULE_iteration = 93, RULE_step_enumeration = 94, RULE_loop_counter = 95, 
		RULE_start_value = 96, RULE_step_value = 97, RULE_end_value = 98, RULE_discrete_expression = 99, 
		RULE_integer_expression = 100, RULE_range_enumeration = 101, RULE_while_control = 102, 
		RULE_call_action = 103, RULE_procedure_call = 104, RULE_parameter_list = 105, 
		RULE_parameter = 106, RULE_exit_action = 107, RULE_return_action = 108, 
		RULE_result_action = 109, RULE_result = 110, RULE_builtin_call = 111, 
		RULE_builtin_name = 112, RULE_procedure_name = 113, RULE_procedure_statement = 114, 
		RULE_procedure_definition = 115, RULE_formal_parameter_list = 116, RULE_formal_parameter = 117, 
		RULE_parameter_spec = 118, RULE_parameter_attribute = 119, RULE_result_spec = 120, 
		RULE_result_attribute = 121;
	public static final String[] ruleNames = {
		"program", "statement", "declaration_statement", "declaration_list", "declaration", 
		"initialization", "identifier_list", "synonym_statement", "synonym_list", 
		"synonym_definition", "constant_expression", "newmode_statement", "newmode_list", 
		"mode_definition", "modo", "discrete_mode", "mode_name", "integer_mode", 
		"boolean_mode", "character_mode", "discrete_mode_name", "literal_range", 
		"upper_bound", "lower_bound", "reference_mode", "composite_mode", "string_mode", 
		"string_length", "array_mode", "index_mode", "element_mode", "location", 
		"simple_location", "location_name", "dereferenced_reference", "string_element", 
		"start_element", "string_slice", "string_location", "left_element", "right_element", 
		"array_element", "expression_list", "array_slice", "array_location", "array_location_range", 
		"primitive_value", "literal", "integer_literal", "digit_sequence", "boolean_literal", 
		"character_literal", "empty_literal", "character_string_literal", "value_array_element", 
		"value_array_slice", "array_primitive_value_complement", "array_primitive_value", 
		"parenthesized_expression", "expression", "conditional_expression", "boolean_expression", 
		"then_expression", "else_expression", "elsif_expression", "operand0", 
		"operator1", "relational_operator", "membership_operator", "operand1", 
		"operator2", "arithmetic_additive_operator", "string_concatenation_operator", 
		"operand2", "arithmetic_multiplicative_operator", "operand3", "monadic_operator", 
		"operand4", "referenced_location", "action_statement", "label_id", "action", 
		"bracketed_action", "assignment_action", "assigning_operator", "closed_dyadic_operator", 
		"assignment_symbol", "if_action", "then_clause", "else_clause", "do_action", 
		"control_part", "for_control", "iteration", "step_enumeration", "loop_counter", 
		"start_value", "step_value", "end_value", "discrete_expression", "integer_expression", 
		"range_enumeration", "while_control", "call_action", "procedure_call", 
		"parameter_list", "parameter", "exit_action", "return_action", "result_action", 
		"result", "builtin_call", "builtin_name", "procedure_name", "procedure_statement", 
		"procedure_definition", "formal_parameter_list", "formal_parameter", "parameter_spec", 
		"parameter_attribute", "result_spec", "result_attribute"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, "','", "':'", "';'", "'_'", "'='", 
		"'''", "'\"'", "'('", "')'", "'['", "']'", "'->'", "'&'", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", "'=='", "'!='", "'<'", "'<='", 
		"'>'", "'>='", "'array'", "'by'", "'chars'", "'dcl'", "'do'", "'down'", 
		"'else'", "'elseif'", "'end'", "'exit'", "'fi'", "'for'", "'if'", "'in'", 
		"'loc'", "'type'", "'od'", "'proc'", "'ref'", "'result'", "'return'", 
		"'returns'", "'syn'", "'then'", "'to'", "'while'", "'bool'", "'char'", 
		"'false'", "'int'", "'length'", "'lower'", "'null'", "'num'", "'pred'", 
		"'print'", "'read'", "'succ'", "'true'", "'upper'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "DIGIT", "WS", "Nl", "BlockComment", "LineComment", "COMMA", "COLON", 
		"SEMICOLON", "UNDERSCORE", "EQUALS", "SINGLEQUOTE", "DOUBLEQUOTE", "LPARENS", 
		"RPARENS", "LBRACKET", "RBRACKET", "ARROW", "STRINGCONCAT", "PLUS", "MINUS", 
		"TIMES", "DIVIDE", "MODULO", "AND", "OR", "NOT", "EQ", "NEQ", "LT", "LE", 
		"GT", "GE", "ARRAY", "BY", "CHARS", "DCL", "DO", "DOWN", "ELSE", "ELSIF", 
		"END", "EXIT", "FI", "FOR", "IF", "IN", "LOC", "TYPE", "OD", "PROC", "REF", 
		"RESULT", "RETURN", "RETURNS", "SYN", "THEN", "TO", "WHILE", "BOOL", "CHAR", 
		"FALSE", "INT", "LENGTH", "LOWER", "NULL", "NUM", "PRED", "PRINT", "READ", 
		"SUCC", "TRUE", "UPPER", "IDENTIFIER", "CharLiteral", "StringLiteral", 
		"UnterminatedBlockComment", "UnterminatedStringLiteral"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lya.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LyaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LyaListener ) ((LyaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LyaListener ) ((LyaListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LyaVisitor ) return ((LyaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(245); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(244);
				statement();
				}
				}
				setState(247); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIGIT) | (1L << UNDERSCORE) | (1L << DCL) | (1L << DO) | (1L << EXIT) | (1L << IF) | (1L << TYPE) | (1L << RESULT) | (1L << RETURN) | (1L << SYN) | (1L << FALSE) | (1L << LENGTH))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (LOWER - 64)) | (1L << (NULL - 64)) | (1L << (NUM - 64)) | (1L << (PRED - 64)) | (1L << (PRINT - 64)) | (1L << (READ - 64)) | (1L << (SUCC - 64)) | (1L << (TRUE - 64)) | (1L << (UPPER - 64)) | (1L << (IDENTIFIER - 64)) | (1L << (CharLiteral - 64)) | (1L << (StringLiteral - 64)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Declaration_statementContext declaration_statement() {
			return getRuleContext(Declaration_statementContext.class,0);
		}
		public Synonym_statementContext synonym_statement() {
			return getRuleContext(Synonym_statementContext.class,0);
		}
		public Newmode_statementContext newmode_statement() {
			return getRuleContext(Newmode_statementContext.class,0);
		}
		public Procedure_statementContext procedure_statement() {
			return getRuleContext(Procedure_statementContext.class,0);
		}
		public Action_statementContext action_statement() {
			return getRuleContext(Action_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LyaListener ) ((LyaListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LyaListener ) ((LyaListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LyaVisitor ) return ((LyaVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(254);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(249);
				declaration_statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(250);
				synonym_statement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(251);
				newmode_statement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(252);
				procedure_statement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(253);
				action_statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_statementContext extends ParserRuleContext {
		public TerminalNode DCL() { return getToken(LyaParser.DCL, 0); }
		public Declaration_listContext declaration_list() {
			return getRuleContext(Declaration_listContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(LyaParser.SEMICOLON, 0); }
		public Declaration_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LyaListener ) ((LyaListener)listener).enterDeclaration_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LyaListener ) ((LyaListener)listener).exitDeclaration_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LyaVisitor ) return ((LyaVisitor<? extends T>)visitor).visitDeclaration_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaration_statementContext declaration_statement() throws RecognitionException {
		Declaration_statementContext _localctx = new Declaration_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(256);
			match(DCL);
			setState(257);
			declaration_list();
			setState(258);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_listContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LyaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LyaParser.COMMA, i);
		}
		public Declaration_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LyaListener ) ((LyaListener)listener).enterDeclaration_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LyaListener ) ((LyaListener)listener).exitDeclaration_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LyaVisitor ) return ((LyaVisitor<? extends T>)visitor).visitDeclaration_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaration_listContext declaration_list() throws RecognitionException {
		Declaration_listContext _localctx = new Declaration_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(260);
			declaration();
			setState(265);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(261);
				match(COMMA);
				setState(262);
				declaration();
				}
				}
				setState(267);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public Identifier_listContext identifier_list() {
			return getRuleContext(Identifier_listContext.class,0);
		}
		public ModoContext modo() {
			return getRuleContext(ModoContext.class,0);
		}
		public InitializationContext initialization() {
			return getRuleContext(InitializationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LyaListener ) ((LyaListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LyaListener ) ((LyaListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LyaVisitor ) return ((LyaVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(268);
			identifier_list();
			setState(269);
			modo();
			setState(271);
			_la = _input.LA(1);
			if (_la==EQUALS) {
				{
				setState(270);
				initialization();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitializationContext extends ParserRuleContext {
		public Assignment_symbolContext assignment_symbol() {
			return getRuleContext(Assignment_symbolContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public InitializationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initialization; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LyaListener ) ((LyaListener)listener).enterInitialization(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LyaListener ) ((LyaListener)listener).exitInitialization(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LyaVisitor ) return ((LyaVisitor<? extends T>)visitor).visitInitialization(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitializationContext initialization() throws RecognitionException {
		InitializationContext _localctx = new InitializationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_initialization);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(273);
			assignment_symbol();
			setState(274);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Identifier_listContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(LyaParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(LyaParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LyaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LyaParser.COMMA, i);
		}
		public Identifier_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LyaListener ) ((LyaListener)listener).enterIdentifier_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LyaListener ) ((LyaListener)listener).exitIdentifier_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LyaVisitor ) return ((LyaVisitor<? extends T>)visitor).visitIdentifier_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Identifier_listContext identifier_list() throws RecognitionException {
		Identifier_listContext _localctx = new Identifier_listContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_identifier_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(276);
			match(IDENTIFIER);
			setState(281);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(277);
				match(COMMA);
				setState(278);
				match(IDENTIFIER);
				}
				}
				setState(283);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
